Se creo la interfaz del login, y los guards y las rutas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-
-<router-outlet></router-outlet>
+<h1 *ngIf="!finishedAuthChecked()">Loading</h1>
+<router-outlet *ngIf="finishedAuthChecked"></router-outlet>
