--- a/src/app/dashboard/layouts/dashboard/dashboard.component.html
+++ b/src/app/dashboard/layouts/dashboard/dashboard.component.html
@@ -1,11 +1,30 @@
-<h1>Dashboard</h1>
-<hr>
-<h3>User</h3>
-<pre>{{ infoUsuario() | json}} </pre>
-<br>
-<span routerLink="/Auth/auth/login">Regresar al login</span>
-<br>
-<br>
-<button (click)="onLogout()">
-  Cerrar sesión
-</button>
+<div class="card">
+  <p-menubar [model]="items"></p-menubar>
+</div>
+
+<br><br><br>
+<p-card header="Lista de Usuarios">
+  <p-table [value]="usuarios" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    currentPageReportTemplate="Mostrando del {first} al {last} de {totalRecords} datos"
+    [rowsPerPageOptions]="[10, 25, 50]">
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width:25%">Id</th>
+        <th style="width:25%">Email</th>
+        <th style="width:25%">Name</th>
+        <th style="width:25%">Password</th>
+        <th style="width:25%">isActive</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-usuario>
+      <tr>
+        <td> {{usuario._id }} </td>
+        <td> {{usuario.email }} </td>
+        <td> {{usuario.name }} </td>
+        <td> {{usuario.password }} </td>
+        <td> {{usuario.isActive }} </td>
+      </tr>
+    </ng-template>
+  </p-table>
+</p-card>
