--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,12 @@
 /*//////////////////////////////////////////////////////////////////
+[ PRIME NG ]*/
+
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+
+
+/*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
 @font-face {
@@ -21,6 +29,9 @@
   src: url('./assets/fonts/poppins/Poppins-SemiBold.ttf');
 }
 
+body{
+  background-color: #eff3f8;
+}
 
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
